--- a/package.json
+++ b/package.json
@@ -9,19 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
+    "@sanity/block-content-to-html": "^2.0.0",
+    "@sanity/cli": "^3.18.1",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.18.1",
+    "lucide-react": "^0.288.0",
+    "moment": "^2.29.4",
+    "next": "13.5.4",
+    "next-sanity": "^5.5.8",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "sanity": "^3.18.1",
+    "styled-components": "5.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-draft-wysiwyg": "^1.13.6",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "typescript": "^5"
   }
 }
