--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sanity/cli": "^3.18.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.18.1",
+    "@vercel/analytics": "^1.1.1",
     "lucide-react": "^0.288.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
