--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "print:env": "tsx -r dotenv/config ./runit.ts"
   },
   "dependencies": {
     "@portabletext/react": "^3.0.11",
-    "@sanity/block-content-to-html": "^2.0.0",
-    "@sanity/cli": "^3.18.1",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.18.1",
     "@vercel/analytics": "^1.1.1",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.288.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
-    "next-sanity": "^5.5.8",
+    "next-sanity": "^6.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.18.1",
+    "sanity": "^3.19.1",
     "styled-components": "5.2"
   },
   "devDependencies": {
@@ -34,6 +33,7 @@
     "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "tsx": "^3.13.0",
     "typescript": "^5"
   }
 }
