add notion as a cms in projects page

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PROJECT_ID=elcuzwvq
 DATASET=production
+
+NOTION_SECRET=secret_DJ3PgFkG62FNT3vDTL7kcX4I1yp7Yae3PDhedO8NaZ3
+NOTION_DATABASE_ID=81d311fd086c4334b0a2d63066e5cea5
+
+NEXT_PUBLIC_SITE_URL=http://localhost:3000
