--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "print:env": "tsx -r dotenv/config ./runit.ts"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.14",
     "@portabletext/react": "^3.0.11",
     "@sanity/image-url": "^1.0.2",
     "@vercel/analytics": "^1.1.1",
+    "axios": "^1.6.7",
     "dotenv": "^16.3.1",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.288.0",
     "moment": "^2.29.4",
     "next": "13.5.4",
