--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# Warning: Do not add secrets (API keys and similar) to this file, as it source controlled!
-# Use `.env.local` for any secrets, and ensure it is not added to source control
+PROJECT_ID=""
+DATASET=""
 
-NEXT_PUBLIC_SANITY_PROJECT_ID="*********"
-NEXT_PUBLIC_SANITY_DATASET="*********"
+NOTION_SECRET=""
+NOTION_DATABASE_ID=""
+
+NEXT_PUBLIC_SITE_URL=""
