--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,6 @@
-PROJECT_ID=""
-DATASET=""
+NOTION_SECRET=
+NOTION_DATABASE_PROJECTS_ID=
+NOTION_DATABASE_CONTENT_ID=
+NOTION_DATABASE_BLOGS_ID=
 
-NOTION_SECRET=""
-NOTION_DATABASE_ID=""
-
-NEXT_PUBLIC_SITE_URL=""
+NEXT_PUBLIC_SITE_URL=
