--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.14",
+    "@react-three/fiber": "^8.16.0",
     "@vercel/analytics": "^1.1.1",
     "axios": "^1.6.7",
+    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.288.0",
     "moment": "^2.29.4",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "styled-components": "5.2"
+    "styled-components": "5.2",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
     "@types/node": "^20",
